objects/Competitive_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_New__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Competitive Plans</relationshipLabel>
        <relationshipName>Competitive_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cisco_Strengths_Strategy__c</fullName>
        <label>Cisco Strengths Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Weakness_Strategy__c</fullName>
        <label>Cisco Weakness Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Strengths_Strategy__c</fullName>
        <description>Information about how Cisco is going to deal with the Competitor’s strengths in this account.</description>
        <label>Competitor Strengths Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Weakness_Strategy__c</fullName>
        <description>The approach  Cisco can take to take advantage of this competitor’s weaknesses at this account</description>
        <label>Competitor Weakness Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field to competitor accounts.</description>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001D6ukEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <description>Any opportunities that this competitor is working on to better penetrate this account.</description>
        <label>Opportunities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Competitor_Name__c</fullName>
        <description>Text field that allows the user to type in the competitor name if they cannot find the actual competitor as a competitor account in Salesforce.com.</description>
        <label>Other Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Field used to capture any other important information about this competitor</description>
        <label>Other Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>URL field for link to other relevant information.</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor_Partner__c</fullName>
        <description>Text field to identify the competitor’s primary partner at this account.</description>
        <label>Primary Competitor Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Service__c</fullName>
        <description>Picklist to indicate the primary service provided by this competitor.</description>
        <label>Primary Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriptional</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>PCS</fullName>
                </value>
                <value>
                    <fullName>TSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Technology__c</fullName>
        <description>Picklist to indicate the primary technology provided by this competitor. The technology Picklist is Cisco centric.</description>
        <label>Primary Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Frame</fullName>
                </value>
                <value>
                    <fullName>Global Networks</fullName>
                </value>
                <value>
                    <fullName>IP Core</fullName>
                </value>
                <value>
                    <fullName>IP Edge</fullName>
                </value>
                <value>
                    <fullName>IP Telephony</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>Metro Core</fullName>
                </value>
                <value>
                    <fullName>Metro Ethernet</fullName>
                </value>
                <value>
                    <fullName>Metro Optical</fullName>
                </value>
                <value>
                    <fullName>Optical</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Storage IT/DCN</fullName>
                </value>
                <value>
                    <fullName>VoIP Gateway</fullName>
                </value>
                <value>
                    <fullName>WAN</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Opp1_Partner__c</fullName>
        <label>Related Solution1 Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opp2_Partner__c</fullName>
        <label>Related Solution2 Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opp3_Partner__c</fullName>
        <label>Related Solution3 Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Solution Plan1</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N300000018v7dEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Solution Plan2</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000001D6zZEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Solution Plan3</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000001D6zeEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Account_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Account Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Comp_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Comp Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>Competitor’s strength at this account.</description>
        <label>Strengths</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <description>The threats that make this competitor’s position vulnerable at this account.</description>
        <label>Threats</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>Competitor’s weaknesses at this account.</description>
        <label>Weaknesses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>zzCompetitive Plan</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Competitive Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>